<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ddns.theneokske.colorchooser.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/seekbar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/RoodeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rood" />

            <EditText
                android:id="@+id/edRood"
                style="@style/EditStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:inputType="number"
                android:text="@string/defaultwaarde" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekbar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/GroeneTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/groen" />

            <EditText
                android:id="@+id/edGroen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:inputType="number"
                android:text="@string/defaultwaarde" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/BlauweTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blauw" />

            <EditText
                android:id="@+id/edBlauw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:inputType="number"
                android:text="@string/defaultwaarde" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hex" />

            <EditText
                android:id="@+id/hex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:inputType="number"
                android:text="@string/defaultwaarde" />
        </LinearLayout>

        <View
            android:id="@+id/kleurView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black" />
    </LinearLayout>

</RelativeLayout>
